<resources>
    <string name="app_name">BikeGenics</string>

    <string name="login1">Welcome to BikeGenics</string>
    <string name="login2">Please Enter Your Login Credientials.</string>
    <string name="login3">Not Having an Account?</string>
    <string name="sign_up">Sign up here!</string>
    <string name="signup1">Connect With Us Here!</string>
    <string name="signupbtn">Signup</string>
    <string name="signup2">Login</string>
    <string name="PROJECT">BIKEGENICS</string>
    <string name="add_category">Add Category</string>
    <string name="logout">Logout</string>
    <string name="view_category">View Category</string>
    <string name="view_post">View Post</string>
    <string name="app_post">App Post</string>
    <string name="add_post">Add Post</string>
    <string name="cancel">Cancel</string>
    <string name="editpost">Edit Post</string>
    <string name="update">Update</string>
    <string name="viewpost">View Post</string>
    <string name="category_name">Category Name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="post_feed">Post Feed</string>
    <string name="contact">Contact</string>
    <string name="user_full_name">User full name</string>
    <string name="date_and_time">Date and Time</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="aboutus">About us</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="abubakkar_shahzad">Abubakkar Shahzad</string>
    <string name="hunzla_qamar">Hunzla Qamar</string>
    <string name="hunzla_qamar_gmail">hunzla.qamar@gmail.com</string>
    <string name="abubakkarshahzad">abubakkarshahzad947@gmail.com</string>
    <string name="description">Welcome To BikeGenics, This is new platform for Vehicle Sale Purchase and Renting. You can find Vehicles of your choice at the ease of your home and on the click of a Button.</string>

</resources>