<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Signup"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintVertical_bias="0.245"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/bikeonly" />

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progressBar"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/btnbg" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/login1"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.245"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/signup1"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.245"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/signup_Image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_upload" />

        <EditText
            android:id="@+id/user_fullname_txt"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtshape"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <EditText
            android:id="@+id/user_phone_txt"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/txtColor"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.472"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/user_age_txt"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/txtColor"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/age"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="2"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.472" />

        <EditText
            android:id="@+id/user_useremail_txt"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/txtColor"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.472" />

        <EditText
            android:id="@+id/user_password_txt"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/txtColor"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.472" />




    </LinearLayout>

    <Button
        android:id="@+id/user_signup_btn"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/btnbg"
        android:fontFamily="@font/poppins_light"
        android:text="@string/signupbtn"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/login3"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/signup2"
            android:textColor="#0645AD"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>
</ScrollView>


