
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape"
    android:gravity="center"
    android:layout_marginBottom="10sp"
    android:orientation="vertical" >

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="100sp"
     android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/viewCategory_categoryName_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/category_name"
        android:textAlignment="center">
    </TextView>

</LinearLayout>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="horizontal"
android:layout_marginTop="10sp"
android:gravity="center" >


<Button
    android:id="@+id/viewCategory_editCategory_btn"
    android:layout_width="100dp"
    android:layout_height="48dp"
    android:layout_gravity="center"
    android:background="@color/btnbg"
    android:fontFamily="@font/poppins_light"
    android:gravity="center"
    android:text="@string/edit"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.219"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.948" />

<Button
    android:id="@+id/viewCategory_delete_btn"
    android:layout_width="100dp"
    android:layout_height="48dp"
    android:layout_gravity="center"
    android:layout_marginStart="20sp"
    android:background="@color/cancel"
    android:fontFamily="@font/poppins_light"
    android:text="@string/delete"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.738"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.948" />
</LinearLayout>

</LinearLayout>


