<androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:scaleX="3"
                    android:scaleY="3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.585"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_headerlogo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="410dp"
            android:layout_height="174dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.156"
            app:srcCompat="@drawable/adhomecover" />

        <Button
            android:id="@+id/btn_addCat"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:background="@drawable/addcategory"
            android:drawableLeft="@drawable/ic_add"
            android:fontFamily="@font/poppins_semibold"
            android:padding="20sp"
            android:text="@string/add_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.483" />

        <Button
            android:id="@+id/btn_viewCat"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:background="@drawable/viewcategory"
            android:drawableLeft="@drawable/ic_view"
            android:fontFamily="@font/poppins_semibold"
            android:padding="20sp"
            android:text="@string/view_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.483" />

        <Button

            android:id="@+id/btn_addPost"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:background="@drawable/addpost"
            android:drawableLeft="@drawable/ic_add"
            android:fontFamily="@font/poppins_semibold"
            android:padding="40sp"
            android:text="@string/add_post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.703" />

        <Button
            android:id="@+id/btn_viewPost"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:background="@drawable/viewpost"
            android:drawableLeft="@drawable/ic_view"
            android:fontFamily="@font/poppins_semibold"
            android:padding="30sp"
            android:text="@string/view_post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.703" />

        <Button
            android:id="@+id/btn_postfeed"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:background="@drawable/postfeed"
            android:drawableLeft="@drawable/ic_feed"
            android:fontFamily="@font/poppins_semibold"
            android:padding="30sp"
            android:text="@string/post_feed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.922" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:background="@drawable/logoutbtn"
            android:drawableLeft="@drawable/ic_exit"
            android:fontFamily="@font/poppins_semibold"
            android:padding="30sp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.922" />
        </androidx.constraintlayout.widget.ConstraintLayout>
