<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:layout_marginBottom="100sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:layout_marginBottom="100sp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/arrowshape"
                    android:drawableLeft="@drawable/ic_back"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.094" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="About Us"
                    android:textAlignment="center"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.095"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="146dp"
                android:layout_height="83dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/bikeonly" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scaleX="3"
                android:scaleY="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.585"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_headerlogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/_1_0_0"
                android:textAlignment="center">

            </TextView>

            <EditText
                android:id="@+id/user_aboutus_postdesc"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:layout_height="150sp"
                android:layout_gravity="center"
                android:background="@color/bluebg"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:text="@string/description"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:textDirection="firstStrongRtl"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="Developers"
                android:textAlignment="center"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.095"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="190sp"
                    android:layout_height="200dp"
                    android:src="@drawable/hunzlaaa"
                    />
                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/hunzla_qamar"
                    android:textAlignment="center">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/hunzla_qamar_gmail"
                    android:textAlignment="center">

                </TextView>

                <ImageView
                    android:layout_width="190sp"
                    android:layout_height="200dp"
                    android:layout_marginTop="20sp"
                    android:src="@drawable/abubakkkar" />
                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/abubakkar_shahzad"
                    android:textAlignment="center">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/abubakkarshahzad"
                    android:textAlignment="center">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
    android:id="@+id/bottomAppBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:fabCradleMargin="5dp"
    app:fabCradleRoundedCornerRadius="20dp"
    android:layout_gravity="bottom">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        app:itemIconTint="@color/navbar"
        android:background="@android:color/transparent"
        app:menu="@menu/bottom_nav_menu" />

</com.google.android.material.bottomappbar.BottomAppBar>

<com.google.android.material.floatingactionbutton.FloatingActionButton
android:id="@+id/fab"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/ic_add"
app:layout_anchor="@id/bottomAppBar" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>